# mcp-server-gcs

./: .gitignore  README.md  pyproject.toml
src/gcs_mcp_server/: server.py
